[gd_scene load_steps=17 format=3 uid="uid://b3rvqpuyxny15"]

[ext_resource type="Script" path="res://scenes/weapons/bullets/explosions/standard_explosion.gd" id="1_kg041"]
[ext_resource type="Texture2D" uid="uid://rxrgbsr1cqik" path="res://assets/sprites/particle.png" id="2_ju4y7"]

[sub_resource type="Curve" id="Curve_rtx2j"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.258929, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_u4t7n"]
curve = SubResource("Curve_rtx2j")

[sub_resource type="Gradient" id="Gradient_5ngek"]
offsets = PackedFloat32Array(0, 0.0306122, 0.0969388)
colors = PackedColorArray(1, 0, 1, 1, 0.595635, 0.574921, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fhm33"]
gradient = SubResource("Gradient_5ngek")

[sub_resource type="Curve" id="Curve_jb6af"]
_data = [Vector2(0, 0.021978), 0.0, 0.0, 0, 0, Vector2(0.125, 0.978022), 2.81319, 2.81319, 0, 0, Vector2(1, 1), 0.084881, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_tg0fy"]
curve_y = SubResource("Curve_jb6af")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6b27c"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 25.0
initial_velocity_min = 190.48
initial_velocity_max = 206.35
directional_velocity_min = 262.86
directional_velocity_max = 720.0
directional_velocity_curve = SubResource("CurveXYZTexture_tg0fy")
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_fhm33")
alpha_curve = SubResource("CurveTexture_u4t7n")

[sub_resource type="Curve" id="Curve_luf4i"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.178571, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qhfjr"]
curve = SubResource("Curve_luf4i")

[sub_resource type="Curve" id="Curve_y852g"]
_data = [Vector2(0, 0.021978), 0.0, 0.0, 0, 0, Vector2(0.125, 0.978022), 2.81319, 2.81319, 0, 0, Vector2(1, 1), 0.084881, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_djlh6"]
curve_y = SubResource("Curve_y852g")

[sub_resource type="Curve" id="Curve_o14gr"]
max_value = 2.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(0.129464, 0.043956), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_l127j"]
curve = SubResource("Curve_o14gr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hj6ap"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 25.0
initial_velocity_min = 182.54
initial_velocity_max = 190.48
directional_velocity_min = 525.72
directional_velocity_max = 720.0
directional_velocity_curve = SubResource("CurveXYZTexture_djlh6")
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_l127j")
alpha_curve = SubResource("CurveTexture_qhfjr")

[node name="StandardExplosion" type="Node2D"]
script = ExtResource("1_kg041")
lifetime = 0.2

[node name="Particles" type="GPUParticles2D" parent="."]
amount = 128
process_material = SubResource("ParticleProcessMaterial_6b27c")
texture = ExtResource("2_ju4y7")
lifetime = 8.0
local_coords = true

[node name="Particles2" type="GPUParticles2D" parent="."]
self_modulate = Color(0.160784, 0.160784, 0.160784, 1)
amount = 128
process_material = SubResource("ParticleProcessMaterial_hj6ap")
texture = ExtResource("2_ju4y7")
lifetime = 17.95
local_coords = true

[node name="LifetimeTimer" type="Timer" parent="."]

[connection signal="finished" from="Particles" to="." method="_on_particles_finished"]
[connection signal="finished" from="Particles2" to="." method="_on_particles_finished"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
